# proxy

./: .codegraph  .gitignore  Dockerfile  README.md  config.example.json  main.py  pyproject.toml  requirements.txt
.github/workflows/: daily.yml
data/: clash_proxies.yaml  valid_http.txt  valid_proxies.json  valid_socks5.txt
output/: all_proxies.txt  http_proxies.txt  socks5_proxies.txt  verified_proxies_all.txt  verified_report_all.json
scripts/: gen_clash.py
src/: __init__.py  api.py  collector.py  config.py  diagnostics.py  exporter.py  models.py  proxy.py  scheduler.py  sources.py  store.py  utils.py  validator.py
tests/: test_api.py  test_config.py  test_diagnostics.py  test_exporter.py  test_gen_clash.py  test_models.py  test_sources.py  test_store.py  test_validator.py
